--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>chat</title>
-	<link rel="stylesheet" href="/stylesheets/style.css"></link>
+	<link rel="stylesheet" href="./stylesheets/style.css"></link>
 </head>
 <body>
 	<div id="content">
+		<div style = "overflow :hidden;">
 		<div id="room"></div>
+		<div id="room_name">房间列表</div>
+		</div>
 		<div id="room-list"></div>
 		<div id="messages"></div>
 		<form action="" id="send-form">
@@ -24,7 +27,7 @@
 	</div>
 	<script src = 'https://cdn.bootcss.com/socket.io/0.9.6/socket.io.min.js' type = 'text/javascript'></script>
 	<script src = 'http://code.jquery.com/jquery-1.8.0.min.js' type = 'text/javascript'></script>
-	<script src = "/javascripts/chat.js" type = 'text/javascript'></script>
-	<script src = "/javascripts/chat_ui.js" type = 'text/javascript'></script>
+	<script src = "./javascripts/chat.js" type = 'text/javascript'></script>
+	<script src = "./javascripts/chat_ui.js" type = 'text/javascript'></script>
 </body>
 </html>
